# elen-toolkit-flask

./: .gitmodules  __init__.py  app.py  pyproject.toml  secure.py  utils.py
static/: manifest.json  sw.js
templates/: base.html  home.html  imc.html  login.html  signup.html  tutorial.html
